# ableton-mcp-extended

./: .coverage  .dockerignore  .env.example  .gitignore  AI_AUDIO_INTEGRATIONS.md  DOCKER_E2E_GUIDE.md  DOCKER_FILES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART_AI_AUDIO.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: labeler.yml
.github/workflows/: README.md  TROUBLESHOOTING.md  ci-tests.yml  pr-checks.yml  release.yml  validate.sh
comfyui_mcp/: __init__.py  client.py  server.py
docker/: README.md
docker/rvc-mock/: Dockerfile  app.py
docker/test-runner/: Dockerfile
docker/uvr5-mock/: Dockerfile  app.py
examples/: README.md  USAGE_EXAMPLES.md  comfyui_audio_workflow_example.json  comfyui_examples.py  localai_examples.py  run_examples.py  rvc_examples.py  stable_audio_workflow.json  uvr5_examples.py
localai_mcp/: __init__.py  client.py  server.py  utils.py
rvc_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_comfyui_client.py  test_e2e_integration.py  test_localai_client.py  test_rvc_client.py  test_uvr5_client.py
uvr5_mcp/: __init__.py  client.py  server.py
